fix: resolve issues with preview display on Firefox

--- a/packages/client/src/views/project/simple/images/TaskProgress.module.scss
+++ b/packages/client/src/views/project/simple/images/TaskProgress.module.scss
@@ -34,6 +34,8 @@
     height: 100%;
     background: var(--grey-200);
     overflow: hidden;
+    background-size: cover;
+    background-position: center;
 
     img,
     .placeholder {
